Fixes for stuff found by FindBugs.
svn path=/trunk/; revision=689


Former-commit-id: b5598f9f54d1493ddad74a5a9c8c00c9f66ff3a8