@@ -1247,7 +1247,7 @@ public abstract class Decoder implements FastInfosetParser {
         } else if (_identifier >= EncodingConstants.RESTRICTED_ALPHABET_APPLICATION_START) {
             CharArray ca = _v.restrictedAlphabet.get(_identifier - EncodingConstants.RESTRICTED_ALPHABET_APPLICATION_START);
             if (ca == null) {
-                throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.alphabetNotPresent", new Object[]{new Integer(_identifier)}));
+                throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.alphabetNotPresent", new Object[]{Integer.valueOf(_identifier)}));
             }
             decodeAlphabetOctetsAsCharBuffer(ca.ch);            
         } else {
@@ -1470,10 +1470,10 @@ public abstract class Decoder implements FastInfosetParser {
                 final char c = decodeUtf8ThreeByteChar(end, b1);
                 if (XMLChar.isContent(c)) {
                     _charBuffer[_charBufferLength++] = c;
-                    break;
                 } else {
                     decodeUtf8StringIllegalState();
                 }
+                break;
             case DecoderStateTables.UTF8_FOUR_BYTES:
             {
                 final int supplemental = decodeUtf8FourByteChar(end, b1);
@@ -1515,10 +1515,10 @@ public abstract class Decoder implements FastInfosetParser {
                 final char c = decodeUtf8ThreeByteChar(end, b1);
                 if (XMLChar.isContent(c)) {
                     ch[_charBufferLength++] = c;
-                    break;
                 } else {
                     decodeUtf8StringIllegalState();
                 }
+                break;
             case DecoderStateTables.UTF8_FOUR_BYTES:
             {
                 final int supplemental = decodeUtf8FourByteChar(end, b1);
@@ -1578,16 +1578,15 @@ public abstract class Decoder implements FastInfosetParser {
                     | (b2 & 0x3F));
                 if (XMLChar.isNCNameStart(c)) {
                     _charBuffer[_charBufferLength++] = c;
-                    break;
                 } else {
                     decodeUtf8NCNameIllegalState();
                 }
+                break;
             }
             case DecoderStateTables.UTF8_THREE_BYTES:
                 final char c = decodeUtf8ThreeByteChar(end, b1);
                 if (XMLChar.isNCNameStart(c)) {
                     _charBuffer[_charBufferLength++] = c;
-                    break;
                 } else {
                     decodeUtf8NCNameIllegalState();
                 }
@@ -1628,16 +1627,15 @@ public abstract class Decoder implements FastInfosetParser {
                     | (b2 & 0x3F));
                 if (XMLChar.isNCName(c)) {
                     _charBuffer[_charBufferLength++] = c;
-                    break;
                 } else {
                     decodeUtf8NCNameIllegalState();
                 }
+                break;
             }
             case DecoderStateTables.UTF8_THREE_BYTES:
                 final char c = decodeUtf8ThreeByteChar(end, b1);
                 if (XMLChar.isNCName(c)) {
                     _charBuffer[_charBufferLength++] = c;
-                    break;
                 } else {
                     decodeUtf8NCNameIllegalState();
                 }
